# nfetch

./: Cargo.toml  README.md
src/: config.rs  main.rs  news.rs  stocks.rs
