[package]
name = "nfetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
newsapi = "0.6.0"
alphavantage = "0.7.0"
chrono = "0.4.19"
tokio = { version = "1.20.0", features = ["full"] }
regex = "1.6.0"
