[package]
name = "nfetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
newsapi = "0.6.0"
alphavantage = "0.7.0"
chrono = "0.4.19"
tokio = { version = "1.20.0", features = ["full"] }
futures = "0.3"
regex = "1.6.0"
serde = "1.0.139"
serde_json = "1.0.82"
xdg = "2.4.1"

[profile.release]
strip = true
lto = true
